rust/macros/tests/invalid/target/debug/deps/no_comma_rs-e6df3814cfcfa0b4.d
/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/libno_comma_rs-e6df3814cfcfa0b4.rmeta: no-comma.rs Cargo.toml

/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/no_comma_rs-e6df3814cfcfa0b4.d: no-comma.rs Cargo.toml

no-comma.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
